# SecureConjunctiveQuery

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  README.md
.github/workflows/: ci.yml
experiment/: CMakeLists.txt  client_encryption.cpp  client_keygen.cpp  client_setup.cpp  client_single_filter.cpp  encryption_time.cpp  equality_time.cpp  exp.hpp  fixsch_time.cpp  flesch_time.cpp  multi_filter_time.cpp  multiple_row_time.cpp  run.cpp  select_col_time.cpp  server_et.cpp  server_inner_join.cpp  server_join.cpp  server_mf.cpp  server_sf.cpp  server_sim_pairing.cpp  server_single_filter.cpp  setup_time.cpp  single_filter_time.cpp  total_ej.cpp  total_equality.cpp  total_et.cpp  total_mf.cpp  total_multi_filter.cpp  total_multi_join.cpp  total_sf.cpp  total_single_filter.cpp  total_single_join.cpp
experiments/: CMakeLists.txt  client_enc_setup_time.cpp  client_keygen_time.cpp  fixsch_time.cpp  flesch_time.cpp  server_aggre.cpp  server_filter_time.cpp  server_join.cpp  server_tpc.cpp
include/: aggre.hpp  crypto.hpp  field.hpp  filter.hpp  flexdb_et.hpp  flexdb_join.hpp  flexdb_mf.hpp  flexdb_sf.hpp  group.hpp  helper.hpp  ipe_aggre.hpp  ipe_ej.hpp  ipe_et.hpp  ipe_filter.hpp  ipe_join.hpp  ipfe.hpp  join.hpp  kim_aggre.hpp  sse_filter.hpp
include_old/: aggre.hpp  init.hpp  ipfe_filter.hpp  ipfe_join.hpp
src/: CMakeLists.txt  aggre.cpp  crypto.cpp  field.cpp  filter.cpp  flexdb_et.cpp  flexdb_join.cpp  flexdb_mf.cpp  flexdb_sf.cpp  group.cpp  helper.cpp  ipe_aggre.cpp  ipe_ej.cpp  ipe_et.cpp  ipe_filter.cpp  ipe_join.cpp  ipfe.cpp  ipfe_filter.cpp  ipfe_join.cpp  join.cpp  kim_aggre.cpp  sse_filter.cpp
src_old/: CMakeLists.txt  group.cpp  init.cpp  join.cpp
test/: CMakeLists.txt  test_aggre.cpp  test_crypto.cpp  test_filter.cpp  test_flexdb_et.cpp  test_flexdb_join.cpp  test_flexdb_mf.cpp  test_flexdb_sf.cpp  test_helper.cpp  test_ipe_aggre.cpp  test_ipe_ej.cpp  test_ipe_et.cpp  test_ipe_filter.cpp  test_ipe_join.cpp  test_join.cpp  test_kim_aggre.cpp  test_sse_filter.cpp
tests/: CMakeLists.txt  test_aggre.cpp  test_crypto.cpp  test_field.cpp  test_filter.cpp  test_group.cpp  test_helper.cpp  test_init.cpp  test_ipe_filter.cpp  test_ipe_join.cpp  test_ipfe.cpp  test_ipfe_filter.cpp  test_ipfe_join.cpp  test_join.cpp
